[package]
name = "modbus-proxy-rs"
version = "1.0.0"
edition = "2021"
authors = [ "Tiago Coutinho <coutinhotiago@gmail.com>",]
description = "Modbus TCP proxy"
homepage = "https://github.com/tiagocoutinho/modbus-proxy-rs"
repository = "https://github.com/tiagocoutinho/modbus-proxy-rs"
readme = "README.md"
rust-version = "1.74"
keywords = [ "modbus", "TCP", "proxy", "bridge" ]
categories = ["network-programming"]
license = "GPL-3.0-or-later"
publish = true

[badges]
maintenance = { status = "experimental" }

[dependencies]
tokio = { version = "1.34", features = ["rt", "net", "macros", "io-util", "sync", "time"] }
structopt = "0.3"
log = "0.4"
env_logger = "0.10"
config = "0.13"
serde = { version = "1", features = ["derive"] }
futures = "0.3.29"

[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies.jemallocator]
version = "0.5"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
